<resources>
    <string name="app_name">志愿服务</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="error_invalid_email">此邮箱无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此字段必填</string>
    <string name="title_activity_main">主活动</string>
    <string name="title_home">首页</string>
    <string name="title_person">个人</string>
    <string name="title_message">消息</string>

    <string name="hello_blank_fragment">你好，空白碎片</string>
    <string name="phone">手机号码</string>
    <string name="create_a_new_account">创建新账号</string>
    <string name="forget_password">忘记密码?</string>
    <string name="sign_up">Sign up</string>
    <string name="setup_info">设置你的个人信息</string>
    <string name="search">搜索</string>
    <string name="launch_project">发布项目</string>
    <string name="topic">主题</string>
    <string name="address">地址</string>
    <string name="name">名字</string>
    <string name="people_number">人数</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="gender">性别</string>
    <string name="identity">身份</string>
    <string name="ok">确定</string>
    <string name="notification">通知</string>
    <string name="nick_name">昵称</string>
    <string name="login_or_register">登录/注册</string>
    <string name="account_settings">账号设置</string>
    <string name="app">应用</string>
    <string name="settings">设置</string>
    <string name="exit_account">退出账号</string>
    <string name="write_something">写点什么吧</string>
    <string name="send_valid_code">发送验证码</string>
    <string name="valid_code">验证码</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="other">其他</string>
    <string name="testChat">你好</string>
    <string name="testAvatar">测试头像</string>
    <string name="testRecommend">测试推荐</string>
    <string name="testDownload">测试下载</string>
    <string name="testRegister">测试注册</string>
    <string name="testAuthLogin">测试验证</string>
    <string name="testDownloadUpdate">测试下载更新</string>
    <string name="testChatUI">测试聊天界面</string>
    <string name="projectImage">项目图像</string>
    <string name="cancelSelect">取消选择</string>
    <string name="favorite">收藏</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="addVideo">添加视频</string>
    <string name="addImage">添加照片</string>
    <string name="editProject">编辑项目</string>
    <string name="deleteProject">删除项目</string>
    <string name="userAvatar">个人头像</string>
    <string name="favoriteProject">已收藏</string>
    <string name="joinedProject">已加入</string>
    <string name="interfaceTest">接口测试</string>
    <string name="appIcon">应用图标</string>
    <string name="versionHistory">版本历史</string>
    <string name="developerGroup">团队成员：</string>
    <string name="uploadingPleaseWait">正在上传，请稍等</string>
    <string name="content">内容</string>
    <string name="noMessage">没有消息</string>
    <string name="searchHistory">搜索历史</string>
    <string name="cleanAll">清空</string>
    <string name="searchResultIsEmpty">没有搜索到相关内容</string>
    <string name="joinProjectNow">立即加入</string>
    <string name="writeSomething">写点什么吧</string>
    <string name="downloadNow">立即下载</string>
    <string name="cancelDownload">取消下载</string>
    <string name="sendMessage">发送消息</string>
    <string name="contactName">联系人</string>
    <string name="contactPhone">联系电话</string>
    <string name="peopleNum">人数</string>
    <string name="type">分类</string>
    <string name="location">地点</string>
    <string name="details">详情</string>
    <string name="comment">评论</string>
    <string name="quickLocale">快速定位</string>
    <string name="permission_rationale">联系人权限被用于提供邮箱</string>
    <string name="testOpenInstall">测试打开安装界面</string>
    <string name="button">按钮</string>
    <string name="upload">上传</string>
    <string name="countMessageVar">%d 条消息</string>
    <string name="needPeoleNumVar">招募 %s 人</string>
    <string name="localeProjectVar">位置: %s</string>
    <string name="typeProjectVar">分类: %s</string>
    <string name="contactNameVar">联系人: %s</string>
    <string name="numberProjectSearchVar">%s 人</string>
    <string name="secondContentSearchVar">%s·%s / %s</string>
    <string name="reSendTimeVar">重新发送(%ds)</string>
    <string name="textChangelogVar">版本号: %s\n更新日志: \n%s</string>
    <string name="Identify">身份证号</string>
    <string name="releasedProject">发布的项目</string>
    <string name="appbar_string" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="scroll_down_behavior" translatable="false">com.bigcreate.zyfw.callback.ScrollHideBehavior</string>
    <string name="release">发布</string>
    <string name="explore">探索</string>
    <string name="sanlorng">Sanlorng</string>
    <string name="test_content">今天又是沙雕的一天 不知道怎么的</string>
    <string name="editInfo">编辑信息</string>
    <string name="joinProject">加入项目</string>
    <string name="groupChat">群聊</string>
    <string name="realName">真实姓名</string>
    <string name="delete">删除</string>
</resources>
