<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AboutActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:contentDescription="@string/appIcon"
        android:layout_above="@id/textAppName"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_favorite_red_500_48dp" />

    <TextView
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textAppName"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_below="@id/textAppName"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:cornerRadius="0dp"
            app:rippleColor="#9E9E9E"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/versionHistory"
            android:id="@+id/textUpdateHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:cornerRadius="0dp"
            app:rippleColor="#9E9E9E"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/developerGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>