<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/sign_up"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressRegister"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            android:layout_gravity="end" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarRegister"
        app:layout_constraintVertical_bias="0.157">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutFormRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/action_sign_in"
                android:id="@+id/imageIconRegister"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textAppNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/imageIconRegister" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/layoutPhoneRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAppNameRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPhoneRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="11"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/layoutPassRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/layoutPhoneRegister"
                app:layout_constraintStart_toStartOf="@+id/layoutPhoneRegister"
                app:layout_constraintTop_toBottomOf="@+id/layoutPhoneRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutIdentifyRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@+id/layoutPassRegister"
                app:layout_constraintStart_toStartOf="@id/layoutPassRegister"
                app:layout_constraintEnd_toEndOf="@id/layoutPassRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:ems="11"
                    android:maxEms="11"
                    android:minEms="11"
                    android:id="@+id/inputIdentifyRegister"
                    android:hint="@string/Identify"
                    android:inputType="numberPassword"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutRealNameRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/layoutIdentifyRegister"
                app:layout_constraintStart_toStartOf="@+id/layoutPhoneRegister"
                app:layout_constraintTop_toBottomOf="@+id/layoutIdentifyRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputRealNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/realName"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutValidCodeRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/buttonSendValidCodeRegister"
                app:layout_constraintStart_toStartOf="@+id/layoutPhoneRegister"
                app:layout_constraintTop_toBottomOf="@+id/layoutRealNameRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputValidCodeRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:hint="@string/valid_code"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSubmitRegister"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                app:cornerRadius="26dp"
                app:layout_constraintEnd_toEndOf="@+id/layoutPhoneRegister"
                app:layout_constraintStart_toStartOf="@id/layoutPhoneRegister"
                app:layout_constraintTop_toBottomOf="@+id/layoutValidCodeRegister" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSendValidCodeRegister"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:minEms="8"
                android:maxEms="12"
                android:text="@string/send_valid_code"
                app:layout_constraintBottom_toBottomOf="@+id/layoutValidCodeRegister"
                app:layout_constraintEnd_toEndOf="@+id/layoutPassRegister"
                app:layout_constraintTop_toTopOf="@+id/layoutValidCodeRegister" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>